Refactor NekoAI: Transition to environment-driven configuration and remove hardcoded values
- Deleted direct_voice_ai.py and name.txt as part of the refactor.
- Introduced configuration management via config/settings.py and config/capabilities.json.
- Moved UI strings to ui/ui_strings.json for easier localization and management.
- Updated requirements.txt to include jinja2 for template rendering.
- Implemented a new orchestrator in src/pipeline/orchestrator.py to handle AI interactions.
- Created a bridge in src/tools/aimy_bridge.py to connect existing functionalities with the new architecture.
- Enhanced the web interface in templates/index.html to utilize dynamic UI strings and improved voice interaction.
- Added comprehensive documentation in CONFIGURATION.md outlining the new configuration structure and customization options.

--- a/.env.example
+++ b/.env.example
@@ -2,15 +2,43 @@
 
 # OpenAI API Configuration
 OPENAI_API_KEY=your_openai_api_key_here
-OPENAI_MODEL=gpt-4
+OPENAI_MODEL=gpt-4o-mini
 
-# Speech Configuration
+# Pipeline (LLM + tool bridge)
+PIPELINE_ENABLED=true
+
+# Whisper transcription models (server-side /api/transcribe)
+WHISPER_MODEL=whisper-1
+WHISPER_FALLBACK_MODEL=gpt-4o-mini-transcribe
+
+# STT/TTS client configuration (browser)
+VOICE_LANG=en-US
+VOICE_RATE=1.0
+VOICE_PITCH=1.0
+VOICE_VOLUME=0.8
+PREFERRED_VOICES=Karen,Samantha,Alex
+STT_RESTART_DELAY_MS=100
+
+# Save/preview policy
+PRIMARY_SAVE_DIR=~/Desktop/NekoAI
+SECONDARY_SAVE_DIR=~/Documents/NekoAIGenerated
+CONTENT_PREVIEW_LIMIT=1000
+ALLOWED_PREVIEW_TYPES=html,txt,md,py,js,css
+
+# API / routing (leave empty for root, or /api for prefix)
+API_PREFIX=
+
+# Prompt config (customize tool name and capabilities CSV if needed)
+TOOL_NAME=neko_tool
+# CAPABILITIES=Application creation,Web search,Code generation
+
+# Speech Configuration (legacy, for direct_voice_ai.py)
 SPEECH_RECOGNITION_TIMEOUT=5
 SPEECH_RECOGNITION_PHRASE_TIMEOUT=1
 TTS_RATE=200
 TTS_VOLUME=0.9
 
-# Wake Word Configuration
+# Wake Word Configuration (legacy)
 WAKE_WORD=assistant
 
 # System Configuration
